--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language="微信小程序"
-*.html linguist-language="微信小程序"
-*.css linguist-language="微信小程序"
+*.js linguist-language=微信小程序
+*.html linguist-language=微信小程序
+*.css linguist-language=微信小程序
